# theasciiproject

./: .#README  .gitignore  .main.cpp.swp  1  CHANGELOG.txt  ChangeLog  Client  DIRECTORIES.txt  INSTALL  INSTALL.txt  LIBTCOD-CREDITS.txt  Linux-Makefile  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  README  README.md  README.txt  ROADMAP.txt  Readme.md  Readme.txt  TODO  TODO.org  TODO.txt  ValgrindOut.xml  aclocal.m4  autogen.sh  build.sh  cachegrind.out.3210  clean.sh  client  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  hmcpp  (+14 more)
.kdev4/: theasciiproject.kdev4
DerivedData/The_ASCII_Project-edtjffvbofdcsocbsutdddfttoza/: info.plist
Legends of Meru/: Legends_of_Meru.1  main.cpp
Legends of Meru.xcodeproj/: project.pbxproj
Legends of Meru.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TAP_Client/: MainClient.cpp  Notes  Platform.cpp  TAP_Client-Info.plist  TAP_Client-Prefix.pch  main.m
TAP_Client/en.lproj/: Credits.rtf
TAP_Server/: TAP_Server.1
TMapDump/: TMapDump.1  TMapDumpMain.cpp
The ASCII Project.xcodeproj/: project.pbxproj
The ASCII Project.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
The ASCII Project/The ASCII Project/: The_ASCII_Project.1  main.cpp
The ASCII Project/The ASCII Project.xcodeproj/: project.pbxproj
WMapDump/: WMapDump.1  WMapDumpMain.cpp
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
build-aux/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
build-aux/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4
client/tap_client/: mainwindow.cpp  mainwindow.h  mainwindow.ui  tap_client.pro
client/tap_client-build-Desktop_Qt_5_0_0_GCC_64bit_SDK-Debug/: TestOut.txt  moc_mainwindow.cpp  tap_client  ui_mainwindow.h
data/: Readme.md  Readme.txt  example_server.conf
data/images/: testout.ans  world.txt
docs/: ABOUT.txt  CHANGELOG.txt  DEPENDENCIES.txt  DIRECTORIES.txt  Dependencies  INSTALL.txt  README.txt  Readme.md  Readme.txt  TODO.txt
docs/Licenses/: BOOST-LICENSE.txt
docs/licenses/: BSD-License.txt  EngineTemplate.txt  Readme.md  Readme.txt  SDL-License.txt
docs/notes/: 12-30-2012.Medium.ServerConsoleLogging.Yamamushi.txt  12-30-2012.None.PersonalBlog.Yamamushi.txt  NOTES  Readme  tiling
experimental/: Makefile  README.txt
experimental/src/: Main.cpp
include/: .colors.h.swo  AnsiConstants.h  AnsiTerm.h  BoostLibs.h  ClientMap.h  ClientSocket.h  ClientWidgets.h  Collect.h  ConfigParser.h  Constants.h  DBConnector.h  Display.h  DisplaySocket.h  Dungeon.h  Entities.h  EntityMap.h  FovLib.h  FunctionUtils.h  Graphics.h  Headers.h  IAC.h  InputParser.h  Keyboard.h  MapHandler.h  NetworkLib.h  Platform.h  Readme.md  Readme.txt  RenderMap.h  SDLMain.h  SDL_Functions.h  Scene.h  Serialization.h  ServerSocket.h  TileMap.h  Tiles.h  UnicodeConstants.h  Widgets.h  Window.h  WorldMap.h  (+11 more)
include/libtcod/: libtcod.h
include/umbra/: umbra.hpp  umbra_callback.hpp  umbra_circle.hpp  umbra_config.hpp  umbra_engine.hpp  umbra_font.hpp  umbra_imod_bsod.hpp  umbra_imod_credits.hpp  umbra_imod_speed.hpp  umbra_key.hpp  umbra_log.hpp  umbra_module.hpp  umbra_module_factory.hpp  umbra_point.hpp  umbra_rect.hpp  umbra_widget.hpp  umbra_widget_button.hpp  umbra_widget_checkbox.hpp
include/win/: mmap.c
lib/: Readme.md  Readme.txt
libtcod-1.5.1/: hm.c  hm.cpp  hmtool  sample  samples_cpp
licenses/: BOOST-LICENSE.txt  LIBPQXX-LICENSE.txt  LIBTCOD-LICENSE.txt  TEROS-Engine-LICENSE.txt
linux/: README.txt
m4/: boost.m4  mysql.m4
makefiles/: README.txt  linux-makefile  makefile-linux  makefile-mingw  makefile-osx
maps/: Readme.md  Readme.txt
misc/: Main.cpp  Main_Server.cpp  README.txt  Readme.md  Readme.txt  vi.c
misc/Sockets-2.3.9.7/: Changelog  HTTPSocket.cpp  HTTPSocket.h  HttpClientSocket.cpp  HttpClientSocket.h  HttpGetSocket.cpp  HttpGetSocket.h  HttpRequest.cpp  IFile.h  Ipv6Address.cpp  ListenSocket.h  Makefile  Makefile.Defines.linux-x86-32  Makefile.Defines.macosx  Makefile.Defines.solaris8  Makefile.Defines.solaris9-sparc-64  Makefile.Defines.win32-cygwin  Makefile.version  SctpSocket.cpp  Socket.cpp  Socket.h  SocketAddress.h  Sockets-config.cpp  StreamSocket.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  Utility.cpp  Utility.h  XmlDocument.cpp  XmlDocument.h  XmlException.cpp  XmlException.h  XmlNode.cpp  XmlNode.h  socket_include.h  sockets-config.h
nbproject/: Package-Default.bash  Package-NewConfiguration.bash  configurations.xml  project.xml
osx/: README.txt  Readme.md  Readme.txt  Server.1  libtcod-gui.dylib  libtcod.dylib  libtcod_debug.dylib  libtcodgui.dylib  libtcodgui_debug.dylib  libtcodxx.dylib  libtcodxx_debug.dylib
scripts/: CleanServerdata.sh  README.txt  Readme.md
src/: #ClientSocket.cpp#  .main.cpp.swp  .map.cpp.swo  AnsiTerm.cpp  AnsiTerm.h  ClientMap.cpp  ClientSocket.cpp  ClientWidgets.cpp  Collect.cpp  ConfigParser.cpp  DBConnector.cpp  Display.cpp  DisplaySocket.cpp  Dungeon.cpp  Entities.cpp  EntityMap.cpp  FovLib.cpp  FunctionUtils.cpp  Graphics.cpp  IAC.cpp  InputParser.cpp  Keyboard.cpp  Main.cpp  MainClient.cpp  MainServer.cc  MainServer.cpp  Main_Client.cpp  Main_Original.cpp  Main_Server.cpp  MapHandler.cpp  NetworkLib.cpp  Platform.cpp  Readme.md  Readme.txt  RenderMap.cpp  SDL_Functions.cpp  Scene.cpp  Serialization.cpp  ServerSocket.cpp  TileMap.cpp  (+15 more)
src/.deps/: MainServer.Po  tap_client-MainClient.Po  tap_server-MainServer.Po
src/accounting/: Readme
src/ai/: Readme  nOStradamus.cpp  nOStradamus.h
src/api/: Readme  ServerAPI.cpp  ServerAPI.h
src/attributes/: Readme
src/audio/: Mixer.cpp  Mixer.h
src/client/: Readme
windows/: README.txt
work.xcworkspace/: contents.xcworkspacedata
xcode/: TEROS-Engine-LICENSE.txt  TODO  umbra_callback.cpp  umbra_config.cpp  umbra_engine.cpp  umbra_font.cpp  umbra_imod_bsod.cpp  umbra_imod_credits.cpp  umbra_imod_speed.cpp  umbra_log.cpp  umbra_module.cpp  umbra_widget.cpp  umbra_widget_button.cpp  umbra_widget_checkbox.cpp
(+689 files in other folders)
